Verified logging (#31)
* Add verification key support in pep server and pep cli

* make get-verification-key.sh executable

* change interval of FSS

* update swagger doc

* recreate sealing key file if it already exists
